@@ -1,3 +1,8 @@
+2013-01-17  Tom Tromey  <tromey@redhat.com>
+
+	* mem-break.c: Remove obsolete comment.
+	* bfin-tdep.c (bfin_breakpoint_from_pc): Fix comment.
+
 2012-01-17  Sanjoy Das <sanjoy@playingwithpointers.com>
 
 	* jit.c (jit_reader_load_command): Interpret the jit reader name
